@@ -4,10 +4,10 @@ Use the Up and Down arrow keys (or PgUp, PgDn, Home, and End) to navigate the li
 
 Modifiy bitsets with Left, Right, SPACE and ENTER.
 
-There are two bitsets:
+The bitsets are:
 
 *"Hide if disabled" - This causes the menu item to completely vanish from the menu if it has been disabled by tags or if it is a "Special" type menu item that is not allowed on the current map. Otherwise the menu item will still appear but will be greyed out and unable to be selected.
 
-*"Close menu if selected" - This causes the menu to be closed after the menu item is selected. It is often useful with menu items in menus that have the "allow gameplay & scripts" bitset turned OFF, since text boxes and scripts triggered by menu items will wait for the menu to close.
+*"Close menu when activated" - This causes the menu to be closed after the menu item is activated with the use key (Enter/Space/Ctrl/Click) or the "use menu item" script command. It is often useful with menu items in menus that have the "allow gameplay & scripts" bitset turned OFF, since text boxes and scripts triggered by menu items will wait for the menu to close.
 
-*"Don't run on-close script" - This bitset only matters if the "Close menu if selected" bitset is also turned on. It suppresses the menu's on-close script trigger.
+*"Don't run on-close script" - This bitset only matters if the "Close menu when activated" bitset is also turned on. It suppresses the menu's on-close script trigger.
