@@ -12,11 +12,11 @@ This is the menu item detail editor. This is where you define what a menu item a
    to close the menu. Unselectable
    captions can used for decoration
    or information, but don't really
-   have much use!
-   They always count as disabled, and
-   the "Set tag", "Toggle tag"
-   options and "Close menu when
-   selected" bits are ignored.
+   have much use! They always count
+   as disabled, which means the
+   "Set tag", "Toggle tag" options
+   and "Close menu when activated"
+   bits are ignored.
    Note: there is no way to add
    a menu item which is unselectable
    with the arrow keys! Sorry!
